@@ -203,6 +203,8 @@ public:
 
 	int stmt_store_result(MYSQL_STMT *);
 
+	int stmt_next_result(MYSQL_STMT *);
+
 	void thread_init();
 
 	void thread_end();
