@@ -32,6 +32,8 @@ GA  1.1.5 -
 - ResultSetMetaData::getTables() not returning result for VIEW when 
   metadatauseinfoschema=false. (Bug#19505348)
 - Version macros missing from installed headers file. (Bug#19553971)
+- Getting multiple resultset from procedure using prepared statement gives
+  error (Bug#19147677).
 
 GA  1.1.4 -
 - Both static and dynamic driver libraries are now linked statically against
